--- a/src/main/webapp/main.css
+++ b/src/main/webapp/main.css
@@ -68,3 +68,13 @@ input[type=button], input[type=submit], input[type=reset] {
 	margin-top:100px;
 	background-color:#4CAF50;
 }
+
+#btn {
+	background-color: #4CAF50;
+	border: none;
+	color: white;
+	padding: 5px 10px;
+	text-decoration: none;
+	margin: 0 2px;
+	cursor: pointer;
+}
